--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,7 @@ name = "ltools"
 version = "0.1.0"
 edition = "2021"
 
+
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [[bin]]
@@ -10,3 +11,4 @@ name = "lt"
 path = "src/main.rs"
 
 [dependencies]
+colored = "1.6"
